--- a/StudentManagementSystem/packages.config
+++ b/StudentManagementSystem/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dropbox.Api" version="4.9.3" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net472" />
   <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net472" />
   <package id="MetroFramework.RunTime" version="1.2.0.3" targetFramework="net472" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.110.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.110.0" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.110.0" targetFramework="net472" />
